syntax = 'proto3';

message EmptyMessage {
}

message ClusterInfo {
  string id = 1;
}

message NodeInfo {
  string id = 1;
  string addr = 2;
}

service WCM {
	rpc CreateCluster(EmptyMessage) returns (ClusterInfo);
	rpc ClusterAddNode(ClusterInfo) returns (NodeInfo);
	rpc ClusterClose(ClusterInfo) returns (EmptyMessage);
}
